--- a/style.css
+++ b/style.css
@@ -1,4 +1,79 @@
 /* Border test */
-* {
+/* * {
     border: 2px solid red;
+} */
+
+body {
+    display: flex;
+    justify-content: center;
+}
+
+.calculator-body {
+    height: 600px;
+    width: 500px;
+    background-color: bisque;
+    display: flex;
+    flex-direction: column;
+    border: 5px solid rgb(105, 105, 105);
+}
+
+/* Display */
+.display-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* height: 90px; */
+    /* background-color: rgb(105, 105, 105); */
+}
+
+.display-screen {
+    background-color: aliceblue;
+    /* border: 4px solid rgb(105, 105, 105); */
+    margin: 5px;
+    text-align: right;
+    font-size: 55px;
+}
+
+/* Main Block */
+.button-block {
+    border-top: 3px solid rgb(105, 105, 105);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+}
+
+
+/* Number Grid */
+.number-grid {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 100%;
+    width: 70%;
+}
+
+.number-square {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    border: 1px solid rgb(105, 105, 105);
+}
+
+.operator-buttons {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    font-weight: bold;
+    width: 30%;
+    /* border: 1px solid rgb(105, 105, 105); */
+}
+
+.operator-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    border: 1px solid rgb(105, 105, 105);
 }
