add backspace icon, and small cleanup of commented code

--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ body {
     overflow: hidden;
     min-width: 0px;
     background-color: rgb(229, 229, 229);
-    /* background-color: rgb(157, 133, 141); */
     border: 2px solid rgb(105, 105, 105);
     margin: 5px;
     padding: 10px;
@@ -61,7 +60,6 @@ button {
     align-items: center;
     font-size: 30px;
     background-color: bisque;
-    /* border: 1px solid rgb(105, 105, 105); */
     font-family: "Lucida Console", Courier, monospace;
 }
 
@@ -71,12 +69,17 @@ button:hover {
 
 #backspaceBtn,
 #equalBtn {
-    background-color: rgb(157, 133, 141);
+    background-color: rgb(213, 184, 149);
 }
 
 #backspaceBtn:hover,
 #equalBtn:hover {
-    background-color: rgb(139, 118, 125);
+    background-color: rgb(195, 169, 137);
+}
+
+#icon-img {
+    height: 30px;
+    width: 30px;
 }
 
 .number-grid {
